syntax = "proto3";

package resdb;

message TestRequest {
    int32 seq = 1;
}

message TestResponse {
}
